--- a/BaiTapLonHeQuanTriCSDL.csproj
+++ b/BaiTapLonHeQuanTriCSDL.csproj
@@ -79,6 +79,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ShipperOrderForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ShipperOrderForm.Designer.cs">
+      <DependentUpon>ShipperOrderForm.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="CategoryForm.resx">
       <DependentUpon>CategoryForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -104,6 +110,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="ShipperOrderForm.resx">
+      <DependentUpon>ShipperOrderForm.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
